2002/01/07 svenwiegand
- Fixed Bug: Single quotes (') after a word were interpreted as a character 
  of the word from CLatexParser::NextWord(). This made the spell checker 
  mark this as a spelling error.
- Feature 540886: Remove error marker when editing a line. Fixed it in another
  way: All error marks will be removed, when a new compilation is about to
  be started.

2002/06/28 svenwiegand
- Using 'LaTeX Help Book' as LaTeX-reference in online help now.

2002/06/27 svenwiegand
- Fixed Bug 551033: Commands on words don't work correctly 
  (hope so at least;-)

2002/06/24 niteria
- Fixed Bug 573198: "Find In Files" fails in english version

2002/06/24 svenwiegand
- Removed Cursor from Splash Screen ;-)
- Included spelling dictionaries into setup script.
- Removed all the system DLLs from the setup script.

2002/06/20 svenwiegand
- Disabled real time spell checking by default.
- Removed 'Test & Suggestions' category from the about box -- to many
  people are not mentioned there.

2002/06/19 svenwiegand
- Enabled debug database for release builds.
- Fixed hanging-problem when closing document on fast systems.
- Updated german translation of newer changes made to the resources.
- Updated version id to 1 Beta 6.00.
- Updated paths of system DLLs in installation script to make them match 
  my XP paths.
- Added manifest file to TXC-resources to make TXC use modern controls on 
  WinXP.
- When the path for spelling dictionarys is loaded from the registry, 
  it will be checked, if the path is valid and otherwise a default path 
  will be used.

2002/06/01 niteria
- Updated defaults for cleaning the project.
  (tempfile of package endnotes [%bm.ent] added)
- Finished Documentation of Placeholders.

2002/05/30 niteria
- Fixed Bug 555447: TeX-Output: Fails for names over 2 lines
- Very small corrections to CPathTool and CCrystalTextView.

2002/05/24 niteria
- Blocking of StructureParser fixed NOW.

2002/05/20 niteria